@@ -146,6 +146,7 @@ nco_usr='' # [sng] NCO user-configurable options (e.g., '-D 1')
 out_fl='' # [sng] Output file
 out_xmp='out.nc' # [sng] Output file for examples
 par_typ='' # [sng] Parallelism type
+pdq_typ='' # [sng] Permutation type
 rgr_opt='--rgr lat_nm_out=lat --rgr lon_nm_out=lon' # [sng] Regridding options (e.g., '--rgr col_nm=lndgrid')
 tps_opt='' # [sng] TempestRemap options
 thr_nbr=2 # [nbr] Thread number for regridder
@@ -175,6 +176,7 @@ function fnc_usg_prn { # NB: dash supports fnc_nm (){} syntax, not function fnc_
     echo "${fnt_rvr}-n${fnt_nrm} ${fnt_bld}nco_opt${fnt_nrm}  NCO options (empty means none) (default ${fnt_bld}${nco_opt}${fnt_nrm})"
     echo "${fnt_rvr}-O${fnt_nrm} ${fnt_bld}drc_out${fnt_nrm}  Output directory (default ${fnt_bld}${drc_out}${fnt_nrm})"
     echo "${fnt_rvr}-o${fnt_nrm} ${fnt_bld}out_fl${fnt_nrm}   Output-file (regridded file) (empty copies Input filename) (default ${fnt_bld}${out_fl}${fnt_nrm})"
+    echo "${fnt_rvr}-P${fnt_nrm} ${fnt_bld}pdq_typ${fnt_nrm}  Permutation type (empty means none) (default ${fnt_bld}${pdq_typ}${fnt_nrm})"
     echo "${fnt_rvr}-p${fnt_nrm} ${fnt_bld}par_typ${fnt_nrm}  Parallelism type (default ${fnt_bld}${par_typ}${fnt_nrm})"
     echo "${fnt_rvr}-R${fnt_nrm} ${fnt_bld}rgr_opt${fnt_nrm}  Regridding options (empty means none) (default ${fnt_bld}${rgr_opt}${fnt_nrm})"
     echo "${fnt_rvr}-s${fnt_nrm} ${fnt_bld}grd_src${fnt_nrm}  Grid-file (source) (empty means infer or use map_fl) (default ${fnt_bld}${grd_src}${fnt_nrm})"
@@ -222,7 +224,7 @@ fi # !arg_nbr
 # http://stackoverflow.com/questions/402377/using-getopts-in-bash-shell-script-to-get-long-and-short-command-line-options
 # http://tuxtweaks.com/2014/05/bash-getopts
 cmd_ln="${@}"
-while getopts :a:D:d:E:f:g:G:h:I:i:Mm:n:O:o:p:R:s:T:t:v:w:x: OPT; do
+while getopts :a:D:d:E:f:g:G:h:I:i:Mm:n:O:o:P:p:R:s:T:t:v:w:x: OPT; do
     case ${OPT} in
 	a) alg_typ=${OPTARG} ;; # Algorithm
 	D) dbg_lvl=${OPTARG} ;; # Debugging level
@@ -238,6 +240,7 @@ while getopts :a:D:d:E:f:g:G:h:I:i:Mm:n:O:o:p:R:s:T:t:v:w:x: OPT; do
 	n) nco_usr=${OPTARG} ;; # NCO options
 	O) drc_out=${OPTARG} ;; # Output directory
 	o) out_fl=${OPTARG} ;; # Output file
+	P) pdq_typ=${OPTARG} ;; # Permutation type
 	p) par_typ=${OPTARG} ;; # Parallelism type
 	R) rgr_opt=${OPTARG} ;; # Regridding options
 	s) grd_src=${OPTARG} ;; # Source grid-file
@@ -256,6 +259,7 @@ shift $((OPTIND-1)) # Advance one argument
 # Derived variables
 grd_dst_dfl="${drc_out}/ncremap_tmp_grd_dst.nc" # [sng] Grid-file (destination) default
 grd_src_dfl="${drc_out}/ncremap_tmp_grd_src.nc" # [sng] Grid-file (source) default
+pdq_fl="${drc_out}/ncremap_tmp_pdq.nc" # [sng] Permuted data default
 tmp_out_fl="${drc_out}/${tmp_out_fl}" # [sng] Temporary output file
 if [ ${alg_typ} = 'bilinear' ] || [ ${alg_typ} = 'bln' ] ; then 
     # ESMF algorithms are bilinear|patch|neareststod|nearestdtos|conserve
@@ -292,6 +296,9 @@ fi # !var_lst
 if [ -n "${xtn_var}" ]; then 
     rgr_opt="${rgr_opt} --xtn=${xtn_var}"
 fi # !var_lst
+if [ -n "${out_fl}" ]; then 
+    out_usr_flg='Yes'
+fi # !out_fl
 if [ -n "${par_typ}" ]; then
     if [ "${par_typ}" != 'bck' ] && [ "${par_typ}" != 'mpi' ] && [ "${par_typ}" != 'nil' ]; then 
 	    echo "ERROR: Invalid -p par_typ option = ${par_typ}"
@@ -305,9 +312,20 @@ elif [ "${par_typ}" = 'mpi' ]; then
     mpi_flg='Yes'
     par_opt=' &'
 fi # !par_typ
-if [ -n "${out_fl}" ]; then 
-    out_usr_flg='Yes'
-fi # !out_fl
+if [ -n "${pdq_typ}" ]; then
+    if [ "${pdq_typ}" != 'airs' ] && [ "${pdq_typ}" != 'mpas' ] && [ "${pdq_typ}" != 'nil' ]; then 
+	    echo "ERROR: Invalid -P pdq_typ option = ${pdq_typ}"
+	    echo "HINT: Valid pdq_typ arguments are 'airs', 'mpas', and 'nil'"
+	    exit 1
+    fi # !pdq_typ
+fi # !pdq_typ
+if [ "${pdq_typ}" = 'airs' ]; then 
+    pdq_opt='-a StdPressureLev,GeoTrack,GeoXTrack'
+fi # !pdq_typ
+if [ "${pdq_typ}" = 'mpas' ]; then 
+    pdq_opt='-a Time,nVertLevels,maxEdges,MaxEdges2,nEdges,nCells'
+fi # !pdq_typ
+
 if [ -n "${thr_usr}" ]; then 
     thr_nbr="${thr_usr}"
 fi # !thr_usr
@@ -683,12 +701,33 @@ for ((fl_idx=0;fl_idx<${fl_nbr};fl_idx++)); do
 
     fi # !map_usr_flg
     
-    # Block 4: Regrid
+    # Block 4: Permutation
+    if [ -n "${pdq_opt}" ]; then # !pdq_opt
+	printf "PDQ(in) : ${in_fl}\n"
+	printf "PDQ(out): ${pdq_fl}\n"
+	cmd_pdq[${fl_idx}]="ncpdq ${nco_opt} ${nco_var_lst} ${pdq_opt} ${in_fl} ${pdq_fl}"
+	# Cause next block (regridding) to operate on PDQ file
+	in_fl=${pdq_fl}
+	
+	# Block 4 Loop 2: Execute and/or echo commands
+	if [ ${dbg_lvl} -ge 1 ]; then
+	    echo ${cmd_pdq[${fl_idx}]}
+	fi # !dbg
+	if [ ${dbg_lvl} -ne 2 ]; then
+	    eval ${cmd_pdq[${fl_idx}]}
+	    if [ $? -ne 0 ] || [ ! -f ${pdq_fl} ] ; then
+		printf "${spt_nm}: ERROR Failed to generate pdq-file. Debug this:\n${cmd_pdq[${fl_idx}]}\n"
+		exit 1
+	    fi # !err
+	fi # !dbg
+    fi # !pdq_opt
+
+    # Block 5: Regrid
     printf "Input : ${in_fl}\n"
     printf "Output: ${out_fl}\n"
     cmd_rgr[${fl_idx}]="ncks -t ${thr_nbr} ${nco_opt} ${nco_var_lst} ${rgr_opt} --map=${map_fl} ${in_fl} ${out_fl}"
     
-    # Block 4 Loop 2: Execute and/or echo commands
+    # Block 5 Loop 2: Execute and/or echo commands
     if [ ${dbg_lvl} -ge 1 ]; then
 	echo ${cmd_rgr[${fl_idx}]}
     fi # !dbg
