@@ -31,6 +31,8 @@ ncremap
 .IR out_drc ] 
 [\-o
 .IR output-file ] 
+[\-P
+.IR pdq_typ ] 
 [\-p
 .IR par_typ ] 
 [\-R
